--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,20 +51,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">atmos.org</a></h1>
+        <h1><a href="/">Know Me Here</a></h1>
         <!-- <p>Where's Corey now?</p> -->
 
         <!-- <h3>The Goods</h3> -->
-        <p class="view"><a href="/projects.html">Open Source Projects<small>Code that Might be Useful to You</small></a></p>
-        <p class="view"><a href="/speaking.html">Talks I've Given<small>On Technologies and Ideas</small></a></p>
+        <p class="view"><a href="/posts.html">My posts<small>random write</small></a></p>
 
         <h3>I'm also on</h3>
-        <p class="view"><a href="https://github.com/atmos" target="tab">GitHub<small>If coding is your thing</small></a></li>
-        <p class="view"><a href="https://twitter.com/atmos" target="tab">Twitter<small>If you tweet</small></a></li>
-        <p class="view"><a href="https://facebook.com/corey.donohoe" target="tab">Facebook<small>If you must</small></a></li>
-        <p class="view"><a href="https://instagram.com/atmoshax" target="tab">Instagram<small>If you share photos</small></a></li>
-        <p class="view"><a href="http://tumblr.atmos.org" target="tab">Tumblr<small>If you're ADD</small></a></li>
-        <p class="view"><a href="http://flickr.com/photos/atmos" target="tab">Flickr<small>If you like photos</small></a></li>
+        <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub<small>If coding is your thing</small></a></li>
+        <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣<small>If you reading</small></a></li>
 
       </header>
       <section id="main">
