--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
 
         <h3>I'm also on</h3>
         <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub<small>If coding is your thing</small></a></li>
-        <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣<small>If you reading</small></a></li>
+        <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣<small>If reading is your thing</small></a></li>
 
       </header>
       <section id="main">
