--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,8 @@
         <!-- <p>Where's Corey now?</p> -->
 
         <!-- <h3>The Goods</h3> -->
-        <p class="view"><a href="/posts.html">My posts<small>random write</small></a></p>
+        <p class="view"><a href="/posts.html">All<small>all my posts</small></a></p>
+        <p class="view"><a href="/story.html">Story<small>little stories</small></a></p>
 
         <h3>I'm also on</h3>
         <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub<small>If coding is your thing</small></a></li>
