--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ page.title }}</title>
+    <title>{{ site.title }}</title>
 
     <link rel="stylesheet" href="https://github.com/themes/minimal/stylesheets/styles.css">
     <style>
@@ -52,9 +52,6 @@
     <div class="wrapper">
       <header>
         <h1><a href="/">Know Me Here</a></h1>
-        <!-- <p>Where's Corey now?</p> -->
-
-        <!-- <h3>The Goods</h3> -->
         <p class="view"><a href="/posts.html">All<small>all my posts</small></a></p>
         <p class="view"><a href="/story.html">Story<small>little stories</small></a></p>
 
@@ -68,7 +65,12 @@
       </section>
       <footer>
         <!-- <p>This is the site of Corey Donohoe</p> -->
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>
+          <small>
+            Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash;
+            powered by <a href="http://jekyllrb.com/"> jekyll</a>
+          </small>
+        </p>
       </footer>
     </div>
 
