--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,7 @@
         <h1><a href="/">Know Me Here</a></h1>
         <p class="view"><a href="/posts.html">All<small>all my posts</small></a></p>
         <p class="view"><a href="/story.html">Story<small>little stories</small></a></p>
+        <p class="view"><a href="/reading.html">Reading<small>好读书，不求甚解</small></a></p>
 
         <h3>I'm also on</h3>
         <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub<small>If coding is your thing</small></a></li>
