--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ site.title }}</title>
 
-    <link rel="stylesheet" href="https://github.com/themes/minimal/stylesheets/styles.css">
+    <!-- <link rel="stylesheet" href="https://github.com/themes/minimal/stylesheets/styles.css"> -->
     <style>
       header { zoom: 1.2; }
       header h1 { margin-bottom: 5px; }
@@ -54,7 +54,7 @@
         <h1><a href="/">Know Me Here</a></h1>
         <p class="view"><a href="/posts.html">All<small>all my posts</small></a></p>
         <p class="view"><a href="/story.html">Story<small>little stories</small></a></p>
-        <p class="view"><a href="/reading.html">Reading<small>好读书，不求甚解</small></a></p>
+        <p class="view"><a href="/reading.html">Reading<small>不求甚解</small></a></p>
 
         <h3>I'm also on</h3>
         <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub<small>If coding is your thing</small></a></li>
@@ -65,7 +65,6 @@
         {{ content }}
       </section>
       <footer>
-        <!-- <p>This is the site of Corey Donohoe</p> -->
         <p>
           <small>
             Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash;
@@ -88,8 +87,6 @@
         s.parentNode.insertBefore(t, s);
       })();
     </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-    <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
+    <script src="js/libs/jquery-1.6.2.min.js"></script>
   </body>
 </html>
