--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,14 @@ layout: default
 <h1>{{page.title}}</h1>
 <hr/>
 {{content}}
+<hr/>
+<div id="post-nav" class="clearfix">
+  {% if page.previous.url %} 
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> 
+  {% endif %} 
+  {% if page.next.url %} 
+    <a class="next" style="float:right;"href="{{page.next.url}}">{{page.next.title}} &raquo;</a> 
+  {% endif %} 
+</div>
 </article>
+
