--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,14 +51,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">Know Me Here</a></h1>
-        <p class="view"><a href="/posts.html">All<small>all my posts</small></a></p>
-        <p class="view"><a href="/story.html">Story<small>little stories</small></a></p>
-        <p class="view"><a href="/reading.html">Reading<small>不求甚解</small></a></p>
+        <h1><a href="/">王泓钦</a></h1>
+        <p class="view"><a href="/posts.html">All</a></p>
+        <p class="view"><a href="/story.html">Story</a></p>
+        <p class="view"><a href="/reading.html">Reading</a></p>
 
         <h3>I'm also on</h3>
-        <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub<small>If coding is your thing</small></a></li>
-        <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣<small>If reading is your thing</small></a></li>
+        <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub</a></li>
+        <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></li>
 
       </header>
       <section id="main">
