--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="/">王泓钦</a></h1>
-        <p class="view"><a href="/posts.html">All</a></p>
+        <h3> Posts</h3>
         <p class="view"><a href="/story.html">Story</a></p>
         <p class="view"><a href="/reading.html">Reading</a></p>
 
