--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ site.title }}</title>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/sticky-footer.css">
-    <link rel="stylesheet" href="/css/common.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/sticky-footer.css" />
+    <link rel="stylesheet" href="/css/common.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   </head>
   <body style="margin-top: 50px">
     <div class="container">
