--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
           <h3>I'm also on</h3>
           <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub</a>
           <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a>
+            <hr/>
+          <p><a href="/atom.xml">订阅(Atom)</a></p>
         </div>
 
         <div class="col-md-7">
