--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="zh-CN">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <title>{{ site.title }}</title>
 
-    <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
+    <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/sticky-footer.css" />
     <link rel="stylesheet" href="/css/common.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/libs/bootstrap.min.js"> </script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
   </head>
   <body style="margin-top: 50px">
     <div class="container">
