--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/sticky-footer.css" />
     <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/popup.css" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/libs/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/js/libs/bootstrap.min.js"> </script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <script type="text/javascript" src="/js/libs/jquery.popup.min.js"> </script>
+    <script type="text/javascript" src="/js/libs/qrcode.min.js"> </script>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   </head>
   <body style="margin-top: 50px">
     <div class="container">
@@ -30,4 +33,6 @@
       </small>
     </div>
   </body>
+  <script>
+    </script>
 </html>
