--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="/css/sticky-footer.css" />
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/popup.css" />
+    <link rel="stylesheet" href="/css/weixin_share.css"/>
 
     <script type="text/javascript" src="/js/libs/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/js/libs/bootstrap.min.js"> </script>
     <script type="text/javascript" src="/js/libs/jquery.popup.min.js"> </script>
     <script type="text/javascript" src="/js/libs/qrcode.min.js"> </script>
+    <script type="text/javascript" src="/js/libs/weixin_share.js"> </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   </head>
