--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <title>{{ site.title }}</title>
+    <meta name="description" content="{{ page.title }}" />
 
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
 
