--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@ layout: common
   <h3> Posts</h3>
   <p class="view"><a href="/story.html">Story</a></p>
   <p class="view"><a href="/reading.html">Reading</a></p>
+  <p class="view"><a href="/poem.html">Poem</a></p>
 
   <h3>I'm also on</h3>
   <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub</a>
