--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@ layout: common
 <div class="col-md-4 pull-left">
   <h1><a href="/">王泓钦</a></h1>
   <h3> Posts</h3>
-  <p class="view"><a href="/story.html">Story</a></p>
-  <p class="view"><a href="/reading.html">Reading</a></p>
-  <p class="view"><a href="/poem.html">Poem</a></p>
+  <p class="view"><a href="/tags/essay.html">闲记</a></p>
+  <p class="view"><a href="/tags/story.html">故事</a></p>
+  <p class="view"><a href="/tags/code.html">code</a></p>
 
   <h3>I'm also on</h3>
   <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub</a>
