--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/sticky-footer.css" />
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/weixin_share.css"/>
+    <link rel="stylesheet" href="/css/syntax.css"/>
 
     <script type="text/javascript" src="/js/libs/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/js/libs/bootstrap.min.js"> </script>
