--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -18,6 +18,9 @@ layout: default
       <article>
         {{ post.excerpt }}
       </article>
+      <p>
+        <a href="{{ post.url }}">more ... </a>
+      </p
   {% endif %}
 
   {% assign found = "no" %}
