--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -19,7 +19,7 @@ layout: default
         {{ post.excerpt }}
       </article>
       <p>
-        <a href="{{ post.url }}">...(More) </a>
+        <a href="{{ post.url }}">... (more) </a>
       </p
   {% endif %}
 
