--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -19,9 +19,9 @@
     <script type="text/javascript" src="/js/libs/qrcode.min.js"> </script>
     <script type="text/javascript" src="/js/libs/weixin_share.js"> </script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body style="margin-top: 50px">
+  <body >
     <div class="container">
       <div class="row">
         {{ content }}
