--- a/css/common.css
+++ b/css/common.css
@@ -9,10 +9,20 @@ article {
 p {
     margin-top: 1.9em;
     margin-bottom: 1.9em;
-    font-size: 16px;
+    font-size: 100%;
+}
+
+#qrcode-outer {
+    margin-top: 1.9em;
+    margin-bottom: 2.7em;
+    text-align: center;
 }
 
 #qrcode {
-    margin-top: 1.9em;
-    margin-bottom: 2.7em;
+    display: inline-block;
+    margin:auto;
+}
+
+body {
+    margin-top: 5em
 }
