--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: common
   <h3> Posts</h3>
   <p class="view"><a href="/tags/essay.html">闲记</a></p>
   <p class="view"><a href="/tags/story.html">故事</a></p>
-  <p class="view"><a href="/tags/code.html">code</a></p>
+  <p class="view"><a href="/tags/code.html">编程</a></p>
 
   <h3>I'm also on</h3>
   <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub</a>
