--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -13,7 +13,11 @@ layout: default
   {% endfor %}
 
   {% if found == "yes" or page.tag == "all" %}
-      <small>{{ post.date | date_to_string }}</small>
+      <small>
+        {{ post.date | date_to_string }}
+        | 
+        <a href="/tags/{{post.tags}}.html"> {{ post.tags }} </a>
+      </small>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       <article>
         {{ post.excerpt }}
