--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: common
 ---
 
 <h1>{{ page.title }} </h1>
@@ -24,7 +24,7 @@ layout: default
       </article>
       <p>
         <a href="{{ post.url }}">... (more) </a>
-      </p
+      </p>
   {% endif %}
 
   {% assign found = "no" %}
