--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -8,8 +8,8 @@
 
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
 
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/weixin_share.css"/>
     <link rel="stylesheet" href="/css/syntax.css"/>
 
