--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,13 @@ layout: common
 <div class="col-md-4 pull-left">
   <h1><a href="/">王泓钦</a></h1>
   <h3> Posts</h3>
-  <p class="view"><a href="/tags/essay.html">闲记</a></p>
-  <p class="view"><a href="/tags/story.html">故事</a></p>
-  <p class="view"><a href="/tags/code.html">编程</a></p>
+  <p><a href="/tags/essay.html">闲记</a></p>
+  <p><a href="/tags/story.html">故事</a></p>
+  <p><a href="/tags/code.html">编程</a></p>
 
   <h3>I'm also on</h3>
-  <p class="view"><a href="https://github.com/hqwrong" target="tab">GitHub</a>
-  <p class="view"><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a>
+  <p><a href="https://github.com/hqwrong" target="tab">GitHub</a></p>
+  <p><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></p>
     <hr/>
   <p><a href="/atom.xml">订阅(Atom)</a></p>
 </div>
