--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,7 @@ footer {
 }
 
 #content {
-    padding-top: 120px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left:  20px;
+    padding: 80px 20px;
     max-width:740px;
     min-width:500px;
     width: 50%;
