--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -25,6 +25,7 @@
       <span><a href="/tags/essay.html">闲记</a></span>
         <span><a href="/tags/story.html">故事</a></span>
         <span><a href="/tags/code.html">编程</a></span>
+        <span><a href="/kindlenote/index.html"> 书摘 </span>
         |
       <span><a href="https://github.com/hqwrong" target="tab">GitHub</a></span>
       <span><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></span>
