--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -22,9 +22,9 @@ layout: common
       <article>
         {{ post.excerpt }}
       </article>
-      <p>
-        <a href="{{ post.url }}">... (more) </a>
-      </p>
+      <!-- <p> -->
+      <!--   <a href="{{ post.url }}">... (more) </a> -->
+      <!-- </p> -->
   {% endif %}
 
   {% assign found = "no" %}
