--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -19,9 +19,9 @@ layout: common
         <a href="/tags/{{post.tags}}.html"> {{ post.tags }} </a>
       </small>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <article>
-        {{ post.excerpt }}
-      </article>
+      <!-- <article> -->
+      <!--   {{ post.excerpt }} -->
+      <!-- </article> -->
       <!-- <p> -->
       <!--   <a href="{{ post.url }}">... (more) </a> -->
       <!-- </p> -->
