--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -22,6 +22,9 @@
   </head>
   <body >
     <header>
+      <div>
+        <img src="http://www.gravatar.com/avatar/aa15d8e8bf14d2174069c2f3601b1d5a?s=200" height=200 width=200/>
+      </div>
       <span><a href="/tags/essay.html">闲记</a></span>
         <span><a href="/tags/story.html">故事</a></span>
         <span><a href="/tags/code.html">编程</a></span>
