--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -2,8 +2,10 @@
 layout: common
 ---
 
+{% if page.tag != "all" %}
 <h1>{{ page.title }} </h1>
 <hr>
+{% endif %}
 
 {% for post in site.posts %}
   {% for tag in post.tags %}
