--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -22,9 +22,7 @@
   </head>
   <body >
     <header>
-      <div>
-        <img src="http://www.gravatar.com/avatar/aa15d8e8bf14d2174069c2f3601b1d5a?s=60" height=60 width=60/>
-      </div>
+      <a href="/"><div class="avatar-header"> </div></a>
       <span><a href="/tags/essay.html">闲记</a></span>
         <span><a href="/tags/story.html">故事</a></span>
         <span><a href="/tags/code.html">编程</a></span>
@@ -32,6 +30,8 @@
         |
       <span><a href="https://github.com/hqwrong" target="tab">GitHub</a></span>
       <span><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></span>
+      |
+      <span> <a href="/profile.html"> 关于我 </a></span>
     </header>
 
     <div id="content">
@@ -39,6 +39,8 @@
     </div>
 
     <footer>
+      <a href="/"> <div class="avatar-footer"> </div></a>
+            
       <span>Hosted on <a href="http://pages.github.com">GitHub Pages</a></span>
       &mdash;
       <span>powered by <a href="http://jekyllrb.com/"> jekyll</a></span>
