--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,14 @@ img, embed, object, video {
   max-width: 100%;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     position: relative;
     font-size: medium;
+    min-height: 100%;
 }
 
 article {
@@ -25,22 +30,30 @@ header {
     position: fixed;
     top: 0;
     width:100%;
-    height: 100px;
+    height: 40px;
     background-color: #f5f5f5;
     text-align: center;
+}
+
+header span {
+    vertical-align: middle;
+}
+
+header div {
+    verticcal-align: middle;
 }
 
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 30px;
+    height: 100px;
     background-color: #f5f5f5;
     text-align: center;
 }
 
 #content {
-    padding: 80px 20px;
+    padding: 80px 20px 150px;
     max-width:800px;
     margin: 0 auto;
 }
@@ -55,3 +68,45 @@ footer {
     display: inline-block;
     margin:auto;
 }
+
+.avatar-header {
+    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
+    background-image: url('/images/avatar_30.jpg');
+    
+    /* make a square container */
+    width: 30px;
+    height: 30px;
+
+    /* fill the container, preserving aspect ratio, and cropping to fit */
+    background-size: cover;
+
+    /* center the image vertically and horizontally */
+    background-position: center;
+
+    /* round the edges to a circle with border radius 1/2 container size */
+    border-radius: 50%;
+
+    display: inline-block;
+    margin-right: 10px
+}
+
+.avatar-footer {
+    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
+    background-image: url('/images/avatar_60.jpg');
+    
+    /* make a square container */
+    width: 60px;
+    height: 60px;
+
+    /* fill the container, preserving aspect ratio, and cropping to fit */
+    background-size: cover;
+
+    /* center the image vertically and horizontally */
+    background-position: center;
+
+    /* round the edges to a circle with border radius 1/2 container size */
+    border-radius: 50%;
+
+    margin: 0 auto;
+}
+
