--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -15,12 +15,15 @@ layout: common
   {% endfor %}
 
   {% if found == "yes" or page.tag == "all" %}
-      <small>
-        {{ post.date | date_to_string }}
-        | 
-        <a href="/tags/{{post.tags}}.html"> {{ post.tags }} </a>
-      </small>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <div class="entry">
+        <small>
+          {{ post.date | date_to_string }}
+          | 
+          <a href="/tags/{{post.tags}}.html"> {{ post.tags }} </a>
+        </small>
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      </div>
+
       <!-- <article> -->
       <!--   {{ post.excerpt }} -->
       <!-- </article> -->
