--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -5,9 +5,9 @@ layout: common
 <div class="col-md-4 pull-left">
   <h1><a href="/">王泓钦</a></h1>
   <h3> Posts</h3>
-  <p><a href="/tags/essay.html">闲记</a></p>
-  <p><a href="/tags/story.html">故事</a></p>
-  <p><a href="/tags/code.html">编程</a></p>
+  <p><a href="/story.html">故事</a></p>
+  <p><a href="/code.html">编程笔记</a></p>
+  <p><a href="/project.html">小东西</a></p>
 
   <h3>I'm also on</h3>
   <p><a href="https://github.com/hqwrong" target="tab">GitHub</a></p>
