--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,7 +3,7 @@ layout: common
 ---
 
 <div class="col-md-4 pull-left">
-  <h1><a href="/">王泓钦</a></h1>
+  <h1 class="fp_title"><a href="/">王泓钦</a></h1>
   <h3> Posts</h3>
   <p><a href="/story.html">故事</a></p>
   <p><a href="/code.html">编程笔记</a></p>
@@ -16,6 +16,6 @@ layout: common
   <p><a href="/atom.xml">订阅(Atom)</a></p>
 </div>
 
-<div class="col-md-7">
+<div class="col-md-6">
   {{ content }}
 </div>
