--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,11 @@ layout: common
 
 
 <article>
-    <small>{{ page.date | date: "%Y-%m-%d" }}| <a href="/">回首页 </a></small>
-  <a href="#"><h1 style="text-align:center">{{page.title}}</h1></a>
+    <small>{{ page.date | date: "%Y-%m-%d" }}</small>
+  <h1 style="text-align:center">{{page.title}}</h1>
   <hr/>
   {{content}}
   <hr/>
-
+  <h6 style="text-align:center"><a href="/">回首页</a></h6>
 </article>
 
