--- a/css/style.css
+++ b/css/style.css
@@ -26,102 +26,12 @@ p {
     font-size: 100%;
 }
 
-header {
-    position: fixed;
-    top: 0;
-    width:100%;
-    height: 40px;
-    background-color: #f5f5f5;
-    text-align: center;
-}
-
-header span {
-    vertical-align: middle;
-}
-
-header div {
-    verticcal-align: middle;
-}
-
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background-color: #f5f5f5;
-    text-align: center;
-}
-
 #content {
-    padding: 80px 20px 150px;
+    padding: 40px 20px 150px;
     max-width:800px;
     margin: 0 auto;
 }
 
-#qrcode-outer {
-    margin-top: 1.9em;
-    margin-bottom: 2.7em;
-    text-align: center;
-}
-
-#qrcode {
-    display: inline-block;
-    margin:auto;
-}
-
-.avatar-header {
-    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
-    background-image: url('/images/avatar_30.jpg');
-    
-    /* make a square container */
-    width: 30px;
-    height: 30px;
-
-    /* fill the container, preserving aspect ratio, and cropping to fit */
-    background-size: cover;
-
-    /* center the image vertically and horizontally */
-    background-position: center;
-
-    /* round the edges to a circle with border radius 1/2 container size */
-    border-radius: 50%;
-
-    display: inline-block;
-    margin-left: 15px;
-    float:left;
-}
-
-.avatar-footer {
-    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
-    background-image: url('/images/avatar_60.jpg');
-    
-    /* make a square container */
-    width: 60px;
-    height: 60px;
-
-    /* fill the container, preserving aspect ratio, and cropping to fit */
-    background-size: cover;
-
-    /* center the image vertically and horizontally */
-    background-position: center;
-
-    /* round the edges to a circle with border radius 1/2 container size */
-    border-radius: 50%;
-
-    margin: 0 auto;
-}
-
-.post-navi {
-    width: 100%
-}
-
-.post-navi .prev {
-    float: left
-}
-
-.post-navi .next {
-    float: right
-}
 
 .entry {
     margin-bottom: 20px;
@@ -129,4 +39,8 @@ footer {
 
 .entry h2 {
     margin-top: 10px;
+}
+
+.fp_title {
+    margin-top: 0;
 }
