--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -7,7 +7,7 @@ layout: common
   <h3> Posts</h3>
   <p><a href="/story.html">故事</a></p>
   <p><a href="/code.html">编程笔记</a></p>
-  <p><a href="/project.html">小东西</a></p>
+  <p><a href="/project.html">东西</a></p>
 
   <h3>I'm also on</h3>
   <p><a href="https://github.com/hqwrong" target="tab">GitHub</a></p>
