--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -6,6 +6,7 @@ layout: common
   <h1 class="fp_title"><a href="/">王泓钦</a></h1>
   <h3> Posts</h3>
   <p><a href="/story.html">故事</a></p>
+  <p><a href="/review.html">书评/影评</a></p>
   <p><a href="/bitcoin.html">比特币</a></p>
   <p><a href="/code.html">编程笔记</a></p>
   <p><a href="/project.html">东西</a></p>
