--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -8,10 +8,22 @@
 
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
 
-    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/syntax.css"/>
+    <link rel="stylesheet" href="/css/github-markdown.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+<style>
+.markdown-body {
+    font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
+    text-rendering: optimizeLegibility;
+    line-height: 1.7;
+    color: #333;
+    font-size: 18px;
+    position: relative;
+    min-height: 100%;
+}
 
+</style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body >
