--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,11 @@ layout: common
 ---
 
 
-<article>
+<article class="markdown-body">
     <small>{{ page.date | date: "%Y-%m-%d" }}</small>
-  <h1 style="text-align:center">{{page.title}}</h1>
-  <hr/>
-  {{content}}
-  <hr/>
-  <h6 style="text-align:center"><a href="/">回首页</a></h6>
+    <div class="post-title"><a href="/">{{page.title}}</a></div>
+    {{content}}
+    <hr/>
+    <h6 style="text-align:center">END</h6>
 </article>
 
