--- a/css/style.css
+++ b/css/style.css
@@ -2,34 +2,27 @@ img, embed, object, video {
   max-width: 100%;
 }
 
-html {
-    height: 100%;
-}
-
 body {
-    position: relative;
-    font-size: medium;
-    min-height: 100%;
+    height: 100%;
+    background: #eee;
 }
 
-article {
-    margin-top: 1.9em;
-    margin-bottom: 1.9em;
-    margin-left: 0em;
-    margin-right:0em;
-    line-height: 1.9em;
+.post-title {
+    text-align: center;
+    font-size: 1.8em;
+    margin: 0.6em 0em 0.8em;
 }
 
-p {
-    margin-top: 1.9em;
-    margin-bottom: 1.9em;
-    font-size: 100%;
+.post-title a {
+    color: #428bca;
 }
 
 #content {
-    padding: 40px 20px 150px;
-    max-width:800px;
-    margin: 0 auto;
+    padding: 5% 10%;
+    max-width:960px;
+    margin: 3em auto 0;
+    background: #fff;
+    overflow: hidden;
 }
 
 
@@ -44,3 +37,5 @@ p {
 .fp_title {
     margin-top: 0;
 }
+
+
