--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,25 @@ body {
     background: #eee;
 }
 
-.post-title {
-    text-align: center;
-    font-size: 1.8em;
-    margin: 0.6em 0em 0.8em;
-}
-
-.post-title a {
-    color: #428bca;
-}
 
 #content {
     padding: 5% 10%;
     max-width:960px;
     margin: 3em auto 0;
     background: #fff;
-    overflow: hidden;
+    overflow: hidden; /* make it wrap float elements */
 }
 
+#content p {
+    font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
+    text-rendering: optimizeLegibility;
+    line-height: 1.7;
+    color: #333;
+    font-size: 18px;
+    position: relative;
+}
+
+/*** postlist ***/
 
 .entry {
     margin-bottom: 20px;
@@ -38,4 +39,23 @@ body {
     margin-top: 0;
 }
 
+/*** post ***/
 
+.post-title {
+    text-align: center;
+    font-size: 1.8em;
+    margin: 0.8em 0em 1.8em;
+}
+
+.post-title a {
+    color: #428bca;
+}
+
+.post-toc {
+    margin-bottom: 2em;
+    color: #888;
+}
+
+.post-toc a {
+    color: #428bca;
+}
