--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: common
 ---
 
 
-<article class="markdown-body">
+<article class="post markdown-body">
     <small>{{ page.date | date: "%Y-%m-%d" }}</small>
     <div class="post-title"><a href="/">{{page.title}}</a></div>
     {{content}}
