--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -8,7 +8,6 @@
 
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/syntax.css"/>
     <link rel="stylesheet" href="/css/github-markdown.css" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -17,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body >
-    <div id="content">
-        {{ content }}
-    </div>
+      <div class="main">
+          {{ content }}
+      </div>
   </body>
 </html>
