--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -4,18 +4,22 @@ layout: common
 
 <div class="fp-left">
     <h1 class="fp-title"><a href="/">王泓钦</a></h1>
-    <h3> Posts</h3>
-    <p><a href="/story.html">小说/故事/闲笔</a></p>
-    <p><a href="/review.html">书评/影评</a></p>
-    <p><a href="/bitcoin.html">比特币</a></p>
-    <p><a href="/code.html">编程笔记</a></p>
-    <p><a href="/project.html">东西</a></p>
+    <div class="colum1">
+        <h3> Posts</h3>
+        <p><a href="/story.html">小说/故事/闲笔</a></p>
+        <p><a href="/review.html">书评/影评</a></p>
+        <p><a href="/bitcoin.html">比特币</a></p>
+        <p><a href="/code.html">编程笔记</a></p>
+        <p><a href="/project.html">东西</a></p>
+    </div>
 
-    <h3>I'm also on</h3>
-    <p><a href="https://github.com/hqwrong" target="tab">GitHub</a></p>
-    <p><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></p>
-    <hr/>
-    <p><a href="/atom.xml">订阅(Atom)</a></p>
+    <div class="colum2">
+        <h3>I'm also on</h3>
+        <p><a href="https://github.com/hqwrong" target="tab">GitHub</a></p>
+        <p><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></p>
+        <hr/>
+        <p><a href="/atom.xml">订阅(Atom)</a></p>
+    </div>
 </div>
 
 <div class="fp-right">
