--- a/css/style.css
+++ b/css/style.css
@@ -38,15 +38,15 @@ hr {
 }
 
 
-@media (max-width: 700px) { /* for large screen */
+@media (max-width: 700px) { /* for small screen */
     .colum1 {
         float: left;
-        min-width: 40%;
+        min-width: 50%;
     }
 
     .colum2 {
         float: left;
-        min-width: 50%;
+        min-width: 40%;
     }
 
     .fp-right {
@@ -55,7 +55,7 @@ hr {
     }
 }
 
-@media  (min-width: 700px) {  /* for small screen */
+@media  (min-width: 700px) {  /* for large screen */
     .fp-left {
         float: left;
         min-width: 40%
