--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -8,9 +8,9 @@
 
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Atom feed"/>
 
-    <link rel="stylesheet" href="/css/syntax.css"/>
-    <link rel="stylesheet" href="/css/github-markdown.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/syntax.css"/>
+    <link rel="stylesheet" href="/assets/css/github-markdown.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 <style>
 </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
