--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,7 +3,7 @@ layout: common
 ---
 
 <div class="fp-left">
-    <h1 class="fp-title"><a href="/">王泓钦</a></h1>
+    <h1 class="fp-title"><a href="/">lazyrobot.me</a></h1>
     <div class="colum1">
         <h3> Posts</h3>
         <p><a href="/story.html">小说/故事/闲笔</a></p>
