--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -18,6 +18,7 @@ layout: common
         <p><a href="https://github.com/hqwrong" target="tab">GitHub</a></p>
         <p><a href="http://www.douban.com/people/61430577/" target="tab">豆瓣</a></p>
         <hr/>
+        <p><a href="/profile.html">关于我</a></p>
         <p><a href="/atom.xml">订阅(Atom)</a></p>
     </div>
 </div>
