--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -11,6 +11,7 @@ layout: common
         <p><a href="/bitcoin.html">比特币</a></p>
         <p><a href="/code.html">编程笔记</a></p>
         <p><a href="/project.html">东西</a></p>
+        <p><a href="/draft.html">未完成</a></p>
     </div>
 
     <div class="colum2">
