--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: common
 
 <article class="post markdown-body">
     <small>{{ page.date | date: "%Y-%m-%d" }}</small>
-    <div class="post-title"><a href="/">{{page.title}}</a></div>
+    <div class="post-title">{{page.title}}</div>
     {{content}}
     <hr/>
-    <h6 style="text-align:center">END</h6>
+    <h6 style="text-align:center"><a href="/">lazyrobot.me</a></h6>
 </article>
 
