--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -6,8 +6,8 @@ layout: common
     <h1 class="fp-title"><a href="/">lazyrobot.me</a></h1>
     <div class="colum1">
         <h3> Posts</h3>
-        <p><a href="/story.html">小说/故事/闲笔</a></p>
-        <p><a href="/review.html">书评/影评</a></p>
+        <p><a href="/story.html">小说/故事</a></p>
+        <p><a href="/review.html">评论/记事</a></p>
         <p><a href="/bitcoin.html">比特币</a></p>
         <p><a href="/code.html">编程笔记</a></p>
         <p><a href="/project.html">东西</a></p>
