--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -6,10 +6,10 @@ layout: common
     <h1 class="fp-title"><a href="/">lazyrobot.me</a></h1>
     <div class="colum1">
         <h3> Posts</h3>
-        <p><a href="/story.html">写作</a></p>
-        <p><a href="/review.html">评论/笔记</a></p>
+        <p><a href="/story.html">虚构</a></p>
+        <p><a href="/note.html">笔记</a></p>
         <p><a href="/bitcoin.html">比特币</a></p>
-        <p><a href="/code.html">编程笔记</a></p>
+        <p><a href="/code.html">编程</a></p>
         <p><a href="/project.html">东西</a></p>
         <p><a href="/draft.html">未完成</a></p>
     </div>
@@ -17,7 +17,7 @@ layout: common
     <div class="colum2">
         <hr />
         <p><a href="/profile.html">关于我</a></p>
-        <p><a href="/atom.xml">订阅(Atom)</a></p>
+        <p><a href="/subscribe.html">订阅(RSS)</a></p>
     </div>
 </div>
 
