--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -8,7 +8,7 @@ layout: common
         <h3> Posts</h3>
         <p><a href="/story.html">虚构</a></p>
         <p><a href="/note.html">笔记</a></p>
-        <p><a href="/code.html">编程</a></p>
+        <p><a href="/code.html">技术</a></p>
     </div>
 
     <div class="colum2">
